--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -1,13 +1,18 @@
-* {
+  * {
   box-sizing: border-box;
   font-family: Ubuntu, sans-serif;
 }
 
 html,
+.navbar-default {
+  background-color: #090633;
+  border-color: transparent;
+}
 body {
   height: 100%;
   padding: 0;
   margin: 0;
+  background-color:#110e41;
 }
 
 /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
@@ -25,7 +30,7 @@ body {
   bottom: 0;
   left: 0;
   min-height: 100px;
-  background: #4e5d6c;
+  background: #1b1849;
 }
 
 /* The code styles the text at the bottom of the footer */
@@ -35,7 +40,7 @@ body {
   bottom: 0;
   left: 0;
   padding: 5px;
-  background: #1b3146;
+  background: #090633;
 }
 
 .navbar {
